adds FFM based OpenCL binding